# Solstice

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SETUP.md  commitlint.config.js  index.html  package-lock.json  package.json  release-please-config.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release-please.yml  release.yml
docs/: editor.md  sol-format.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/editor/: chart.rs  commands.rs  mod.rs  state.rs  timing.rs
src-tauri/src/formats/: sol.rs
src-tauri/src/models/: chart.rs
src/components/editor/: Editor.tsx  NewChartDialog.tsx  NoteField.tsx  StatusBar.tsx  TimingPanel.tsx  Toolbar.tsx  UnsavedDialog.tsx  editor.css
src/lib/: audio.ts  timing.test.ts  timing.ts
src/stores/: editorStore.ts
src/types/: editor.ts
