[package]
name = "solstice"
version = "0.0.0"
description = "Universal rhythm game toolkit — editor, converter, and pack manager"
authors = ["fatelvx", "kaanreal"]
license = "MIT"
repository = "https://github.com/fatelvx/Solstice"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "solstice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
thiserror = "2"
log = "0.4"
tauri = { version = "2.11.2" }
tauri-plugin-log = "2"
